monitoring-files/prometheus-cluster-monitoring/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: prometheus-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: ujji-prom.nip.io
    http:
      paths:
      - backend:
          service:
            name: prometheus-server
            port:
              number: 80
        path: /
        pathType: Prefix
